refactor: fix some mistakes
