# docs/swagger.json
@@ -17,7 +17,7 @@
     "paths": {
         "/api/v1/user/captcha": {
             "post": {
-                "description": "根据邮箱发送验证吗，并更新数据库",
+                "description": "根据邮箱发送验证码，并更新数据库",
                 "consumes": [
                     "application/json"
                 ],
@@ -27,6 +27,7 @@
                 "tags": [
                     "社交模块"
                 ],
+                "summary": "发送验证码",
                 "parameters": [
                     {
                         "description": "邮箱",
@@ -34,7 +35,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.CaptchaValidQ"
+                            "$ref": "#/definitions/api.GetCaptchaQ"
                         }
                     }
                 ],
@@ -42,7 +43,7 @@
                     "200": {
                         "description": "用户注册账号,返回注册成功信息",
                         "schema": {
-                            "$ref": "#/definitions/api.RegisterA"
+                            "$ref": "#/definitions/api.GetCaptchaA"
                         }
                     }
                 }
@@ -60,6 +61,7 @@
                 "tags": [
                     "社交模块"
                 ],
+                "summary": "注册",
                 "parameters": [
                     {
                         "description": "用户名, 邮箱, 密码, 验证码",
@@ -83,7 +85,15 @@
         }
     },
     "definitions": {
-        "api.CaptchaValidQ": {
+        "api.GetCaptchaA": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.GetCaptchaQ": {
             "type": "object",
             "properties": {
                 "email": {
@@ -94,9 +104,6 @@
         "api.RegisterA": {
             "type": "object",
             "properties": {
-                "code": {
-                    "type": "integer"
-                },
                 "message": {
                     "type": "string"
                 }
